--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README
+include README.rst
 include CHANGELOG
 recursive-include cms_social_facebook/templates *
 recursive-include cms_social_facebook/static *
